--- a/static/add.css
+++ b/static/add.css
@@ -1,4 +1,59 @@
 *{
-  margin:0px;
-  padding:0px;
+    margin:0px;
+    padding:0px;
+}
+body{
+    min-height:100vh;
+    width:100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url("https://www.bajajfinservmarkets.in/discover/wp-content/uploads/2022/02/MicrosoftTeams-image-4-1024x543.png");
+    background-size: cover;
+    background-position: center;
+    position:relative;  
+}
+
+h2 {
+    visibility: hidden;
+}
+
+.header h3 a{
+    float:right;
+    color:white;
+    padding:20px;
+    text-decoration: none;   
+}
+
+.container{ 
+    margin:7% 20%;
+    background-color: rgb(134, 134, 162);
+    width:60%;
+    height:60%;
+    padding:80px;
+}
+
+.container h1{
+    text-align: center;
+    padding:10px;
+    color:#fff;
+}
+
+.container form label{
+    display:block;
+    color:#fff;
+    padding:10px 0px;
+}
+.container form input,select{
+    width:100%;
+    border-radius: 5px;;
+    height:35px;
+}
+    
+.container form{
+    margin:10px 5%;
+}
+
+#add-trans{
+    color:white;
+    margin:15px 0px;
+    background-color:rgb(59, 56, 70);
+    width:100%  
 }
