--- a/templates/startpage.html
+++ b/templates/startpage.html
@@ -59,11 +59,6 @@
                 </ul>
             </div>
         </nav>
-        <b><h1 class="display-2">
-            <pre>
-                BUDGET
-                TRACKING
-                APP
-             </pre></h1></b>
+        <b><h1 class="display-2">BUDGET<br> TRACKING<br> APP</h1></b>
     </body>
 </html>
